# confluence-to-notion

./: .coderabbit.yaml  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
.changeset/: c2n-init-profiles.md  drop-allow-write-gate.md  initial-release.md
.claude/agents/: pattern-discovery.md
.claude/commands/: add-agent.md  develop.md  discover.md  eval-rules.md  review-run.md
.claude/docs/: ADR-00M-cli-surface-freeze.md  ADR-00N-port-to-typescript.md  ADR.md  architecture.md
.claude/rules/: agents.md  prompts.md  python-style.md  testing.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  migration-playbook.md  slack-openclaw-c2n-bridge.md
docs/adr/: 001-multi-agent-pattern.md
examples/: ci-github-actions.yml  migrate-single-page.md
examples/mcp/: claude-desktop.json
output/dev/: implement-log.json  plan.json  review.json
scripts/: develop.sh  discover.sh  run-eval.sh  scout-pipeline.sh  setup.sh
skills/c2n-migrate/: README.md  SKILL.md
src/: cli.ts  config.ts  configStore.ts  mcp.ts  url.ts
src/agentOutput/: finalRuleset.ts  schemas.ts
src/cli/: auth.ts  confluenceEnv.ts  convert.ts  discover.ts  evalHarness.ts  fetch.ts  finalize.ts  index.ts  init.ts  migrate.ts  notion.ts  profiles.ts  promptInput.ts  stub.ts  use.ts  (+1 more)
tests/: cli.test.ts  config.test.ts  conftest.py  globalSetup.ts  url.test.ts
(+216 files in other folders)
