[project]
name = "confluence-to-notion"
version = "0.1.0"
description = "Auto-discover Confluence → Notion transformation rules using a multi-agent pipeline"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "notion-client>=2.2.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
cli = "confluence_to_notion.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "BLE", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/confluence_to_notion/cli.py" = ["B008"]

[tool.mypy]
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = ["integration: E2E integration tests (require explicit -m integration)"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/confluence_to_notion"]
